# libgeomag

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
geomag/: Cargo.toml  build.rs
geomag-jni/: Cargo.toml
geomag-jni/src/: lib.rs
geomag/data/: IGRF.COF
geomag/src/: datetime.rs  lib.rs  location.rs  polynomial.rs  util.rs
geomag/src/model/: igrf.rs  wmm.rs
geomag/src/num/: float.rs  int.rs  mod.rs
geomag/tests/: test.rs
scripts/: parse_igrf.py  parse_wmm.py
src/: datetime.rs  field.rs  lib.rs  location.rs  polynomial.rs  util.rs
src/model/: igrf.rs  mod.rs  wmm.rs
src/num/: angle.rs  convert.rs  float.rs  mod.rs  unit.rs
tests/: test.rs  tests.rs
