[package]
name = "geomag"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies.chrono]
version = "0.4"
default-features = false
optional = true

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[features]
default = ["igrf", "wmm"]
igrf = []
wmm = []